added Navbar element, AppLink custom ui-kit element

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,12 @@
 .app.dark{
-    --bg-color: rgb(63, 26, 93);
+    --bg-color: #445E93;
+    --inverted-bg-color: #FCECC9;
 
-    --primary-color: rgb(176, 248, 255);
-    --secondary-color: rgb(255, 255, 255);
+
+    --primary-color: #7EB2DD;
+    --secondary-color: #FCB0B3;
+
+    --inverted-primary-color: #F93943;
+    --inverted-secondary-color: #7EB2DD;
+
 }
