--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,6 +1,10 @@
 .app.light{
-    --bg-color: rgb(252, 249, 255);
+    --bg-color: #FCECC9;
+    --inverted-bg-color: #445E93;
 
-    --primary-color: rgb(111, 0, 122);
-    --secondary-color: #bbbbbb;
+    --primary-color: #F93943;
+    --secondary-color: #7EB2DD;
+
+    --inverted-primary-color: #7EB2DD;
+    --inverted-secondary-color: #FCB0B3;
 }
