stylelint, eslint config fixed, i18next eslint plugin added

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,12 +1,8 @@
-.app.dark{
-    --bg-color: #445E93;
-    --inverted-bg-color: #FCECC9;
-
-
-    --primary-color: #7EB2DD;
-    --secondary-color: #FCB0B3;
-
-    --inverted-primary-color: #F93943;
-    --inverted-secondary-color: #7EB2DD;
-
+.app.dark {
+    --bg-color: #445e93;
+    --inverted-bg-color: #fcecc9;
+    --primary-color: #7eb2dd;
+    --secondary-color: #fcb0b3;
+    --inverted-primary-color: #f93943;
+    --inverted-secondary-color: #7eb2dd;
 }
