--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,10 +1,8 @@
-.app.light{
-    --bg-color: #FCECC9;
-    --inverted-bg-color: #445E93;
-
-    --primary-color: #F93943;
-    --secondary-color: #7EB2DD;
-
-    --inverted-primary-color: #7EB2DD;
-    --inverted-secondary-color: #FCB0B3;
+.app.light {
+    --bg-color: #fcecc9;
+    --inverted-bg-color: #445e93;
+    --primary-color: #f93943;
+    --secondary-color: #7eb2dd;
+    --inverted-primary-color: #7eb2dd;
+    --inverted-secondary-color: #fcb0b3;
 }
