--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,14 +1,12 @@
-@import "./themes/normal.scss";
-@import "./variables/global.scss";
-@import "./themes/dark.scss";
+@import "./themes/normal";
+@import "./variables/global";
+@import "./themes/dark";
 @import "reset";
 
-.app{
+.app {
     font: var(--font-m);
-
     background: var(--bg-color);
     color: var(--primary-color);
-
     min-height: 100vh;
 }
 
